--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -63,7 +63,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q86-Wv-zlY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-69" y="-230"/>
+            <point key="canvasLocation" x="-1389" y="-190"/>
         </scene>
         <!--Personal ProgramTK Calendar Day View Controller-->
         <scene sceneID="pVE-Ny-Uf6">
@@ -644,6 +644,20 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eEq-FH-buG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="996" y="685"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="887-Wi-pEl">
+            <objects>
+                <viewController storyboardIdentifier="" id="haF-9o-LhY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LDi-3h-5SQ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qcN-LV-Wgw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-150" y="-221"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LRF-Xc-bsB">
