--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -652,12 +652,40 @@
                     <view key="view" contentMode="scaleToFill" id="LDi-3h-5SQ">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nWf-Q0-YUM">
+                                <items>
+                                    <navigationItem title="Session" id="KBO-w9-5a0">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="8cd-5O-ukP"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nWf-Q0-YUM" firstAttribute="trailing" secondItem="LDi-3h-5SQ" secondAttribute="trailing" type="default" id="CID-U9-iwp"/>
+                            <constraint firstItem="nWf-Q0-YUM" firstAttribute="leading" secondItem="LDi-3h-5SQ" secondAttribute="leading" type="default" id="MIG-wX-Zg9"/>
+                            <constraint firstItem="nWf-Q0-YUM" firstAttribute="top" secondItem="LDi-3h-5SQ" secondAttribute="top" type="default" id="egE-8P-MCd"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qcN-LV-Wgw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-150" y="-221"/>
+        </scene>
+        <!--EventUI View Controller-->
+        <scene sceneID="dBg-eA-mFn">
+            <objects>
+                <viewController storyboardIdentifier="EventUIViewController" id="BoZ-sp-bTT" customClass="EventUIViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ljv-Zl-qK0">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rIm-rk-VWK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-122" y="-871"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LRF-Xc-bsB">
@@ -708,10 +736,15 @@
                 <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
             </relationships>
         </class>
+        <class className="EventUIViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventUIViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
         <class className="HomeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
             <relationships>
-                <relationship kind="action" name="networkingButton:" candidateClass="UIButton"/>
                 <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
             </relationships>
         </class>
