--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -22,15 +22,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="loginButton:" destination="MSP-a8-Vhu" eventType="touchUpInside" id="2Gq-3O-Tyy"/>
                                     <segue destination="9qT-Qf-qzL" kind="push" identifier="segue0" id="OmK-3p-ONM"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dnh-yB-IYh">
-                                <items>
-                                    <navigationItem title="iConfs" id="WA6-EE-nK4"/>
-                                </items>
-                            </navigationBar>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="crb-5Q-NBr">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="243" id="0aS-eZ-jib"/>
@@ -48,16 +42,13 @@
                             <constraint firstItem="Qic-FU-Cwb" firstAttribute="trailing" secondItem="crb-5Q-NBr" secondAttribute="trailing" type="default" id="0dL-Ot-9dQ"/>
                             <constraint firstItem="Qic-FU-Cwb" firstAttribute="leading" secondItem="crb-5Q-NBr" secondAttribute="leading" type="default" id="5gt-ya-vYs"/>
                             <constraint firstAttribute="bottom" secondItem="Qic-FU-Cwb" secondAttribute="bottom" constant="238" id="DHK-RE-Alh"/>
-                            <constraint firstItem="Dnh-yB-IYh" firstAttribute="top" secondItem="oT4-DQ-Nqz" secondAttribute="top" type="default" id="PDR-QN-wfU"/>
                             <constraint firstItem="crb-5Q-NBr" firstAttribute="leading" secondItem="oT4-DQ-Nqz" secondAttribute="leading" constant="35" id="Ua7-zO-qZr"/>
                             <constraint firstAttribute="bottom" secondItem="GwD-rA-WWT" secondAttribute="bottom" constant="119" id="Yf1-zs-tkD"/>
-                            <constraint firstItem="Dnh-yB-IYh" firstAttribute="trailing" secondItem="oT4-DQ-Nqz" secondAttribute="trailing" type="default" id="ajt-wv-5sk"/>
-                            <constraint firstItem="Dnh-yB-IYh" firstAttribute="leading" secondItem="oT4-DQ-Nqz" secondAttribute="leading" type="default" id="av2-rl-6Sf"/>
                             <constraint firstItem="GwD-rA-WWT" firstAttribute="trailing" secondItem="Qic-FU-Cwb" secondAttribute="trailing" type="default" id="bV6-wk-kgK"/>
-                            <constraint firstItem="crb-5Q-NBr" firstAttribute="top" secondItem="oT4-DQ-Nqz" secondAttribute="top" constant="208" id="fya-vE-8ny"/>
+                            <constraint firstItem="crb-5Q-NBr" firstAttribute="top" secondItem="oT4-DQ-Nqz" secondAttribute="top" constant="173" id="rUN-Tz-MBd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Y2H-He-Qzr"/>
+                    <navigationItem key="navigationItem" title="iConfs" id="Y2H-He-Qzr"/>
                     <connections>
                         <outlet property="emailField" destination="crb-5Q-NBr" id="Oz1-Y3-Iwz"/>
                         <outlet property="passwordField" destination="Qic-FU-Cwb" id="JAe-i0-AOp"/>
@@ -232,9 +223,7 @@
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="bottom" secondItem="MhJ-BT-VIX" secondAttribute="bottom" type="default" id="yNX-F9-Jdc"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="iConfs" id="IIK-dc-mJ7">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="a5L-sE-qsd"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="iConfs" id="IIK-dc-mJ7"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QdX-JP-ijD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -486,15 +475,6 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="rL4-iZ-xle">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="331" id="P5P-Ua-7dt"/>
-                                </constraints>
-                                <segments>
-                                    <segment title="My interests"/>
-                                    <segment title="All"/>
-                                </segments>
-                            </segmentedControl>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="N9S-Ts-YbY">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -519,8 +499,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rL4-iZ-xle" firstAttribute="bottom" secondItem="Gmq-er-5np" secondAttribute="bottom" type="default" id="55i-Bq-y2q"/>
-                            <constraint firstItem="rL4-iZ-xle" firstAttribute="leading" secondItem="Gmq-er-5np" secondAttribute="leading" constant="-7" id="jRr-QT-Sbf"/>
                             <constraint firstItem="N9S-Ts-YbY" firstAttribute="top" secondItem="Gmq-er-5np" secondAttribute="top" constant="109" id="ony-qH-EKY"/>
                             <constraint firstItem="N9S-Ts-YbY" firstAttribute="leading" secondItem="Gmq-er-5np" secondAttribute="leading" constant="66" id="yqF-pM-Gb4"/>
                         </constraints>
@@ -660,12 +638,91 @@
         <image name="Organization.jpg" width="50" height="50"/>
         <image name="Schedule.jpg" width="50" height="50"/>
     </resources>
+    <classes>
+        <class className="AllNetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="AllNotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableNotifications" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CommunicationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clearButton:" candidateClass="UIButton"/>
+                <relationship kind="action" name="feedbackOrMessageButton:" candidateClass="UISegmentedControl"/>
+                <relationship kind="action" name="sendButton:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="EventUIViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventUIViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="HomeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="IConfsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IConfsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="loginButton:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="NetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="personPhoto" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="NotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="PersonProfileViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="PersonalProgramTKCalendarDayViewController" superclassName="TKCalendarDayViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalProgramTKCalendarDayViewController.h"/>
+        </class>
+        <class className="TKCalendarDayViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TKCalendarDayViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="idi-Gk-Psv"/>
+        <segue reference="ukM-KT-DGy"/>
     </inferredMetricsTieBreakers>
 </document>
